Resolves subscription opt-in description spacing issue
https://app.productive.io/2650-4site-interactive-studios-inc/tasks/task/3677552?filter=eyJpZCI6IjMxOTIiLCJzb3J0QnkiOiJkdWUtZGF0ZSIsImdyb3VwQnkiOm51bGwsImNvbHVtbnMiOiJ0aXRsZSxwcm9qZWN0LHRhc2stbGlzdCxkdWUtZGF0ZSx0b2RvcyxyZW1haW5pbmctdGltZSx3b3JrZmxvdy1zdGF0dXMiLCJjb2x1bW5TZXR0aW5ncyI6e30sImZvcm11bGFzIjp7fSwidHJhbnNwb3NlQnkiOm51bGwsImxheW91dElkIjoiMTAyIiwicmVwb3J0TGF5b3V0SWQiOm51bGwsImNoYXJ0VHlwZUlkIjpudWxsLCJhc3NpZ25lZV9pZCI6eyJlcSI6WyIzMjUxMCJdfSwid29ya2Zsb3dfc3RhdHVzX2NhdGVnb3J5X2lkIjp7ImVxIjpbIjEiLCIyIl19fQ%3D%3D&taskActivityId=141601320

--- a/src/style.scss
+++ b/src/style.scss
@@ -964,4 +964,9 @@ Miscellaneous Pages (To Be Deleted After Development)
   #clear-autofill-data {
     display: none !important;
   }
+
+  form[action="/page/48122/subscriptions/2"] .subscription_description p,
+  form[action="/page/49041/subscriptions/2"] .subscription_description p{
+    margin-top: 0px;
+  }
 }
